# video-resize

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  resize.rs  util.rs
src/resize/: algorithms.rs  mod.rs
