[package]
name = "video-resize"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Video crop and resize library in Rust, for use with the rav1e/v_frame ecosystem"
repository = "https://github.com/shssoichiro/video-resize"
documentation = "https://docs.rs/video-resize"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nalgebra = { version = "0.31.4", default-features = false, features = ["std"] }
num-traits = "0.2.15"
v_frame = "0.3.1"

[features]
default = []
# Enables extra code that is only useful for development of this library
devel = []
