[package]
name = "video-resize"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Video crop and resize library in Rust, for use with the rav1e/v_frame ecosystem"
repository = "https://github.com/shssoichiro/video-resize"
documentation = "https://docs.rs/video-resize"
exclude = ["test_files"]
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
num-traits = "0.2.15"
v_frame = { version = "0.5.1", features = ["padding_api"] }

[features]
default = []
# Enables extra code that is only useful for development of this library
devel = []

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
yuvxyb = "0.5"

[profile.dev]
opt-level = 2
